<resources>
    <!-- Start -> Application -->
    <string name="app_name" translatable="false">GeoBaza</string>
    <!-- End -> Application -->

    <!-- Start -> LocationManager -->
    <string name="google_maps_query" translatable="false">google.navigation:q=</string>
    <string name="google_maps_package" translatable="false">com.google.android.apps.maps</string>
    <!-- End -> LocationManager -->

    <string name="firebase_notification_channel_id" translatable="false">fire_not_ch_id_1</string>
    <string name="subscription_topic_projects" translatable="false">/topics/projects</string>

    <!-- Start -> EmptyView -->
    <string name="ev_no_internet">Cannot connect to server. Check your Internet connection and try again.</string>
    <string name="ev_no_service">Service is not available. Try again later.</string>
    <string name="ev_no_data">No results.</string>
    <string name="ev_no_password">We need your registered email address to send you a password reset link.</string>
    <!-- End -> EmptyView -->

    <!-- Start -> Filter categories -->
    <string name="filter_area">Area</string>
    <string name="filter_state">State</string>
    <!-- End -> Filter categories -->

    <!-- Start -> Sort categories -->
    <string name="sort_type">Sort by</string>
    <string name="sort_order">Order</string>
    <!-- End -> Sort categories -->

    <!-- Start -> FilterDialogFragment -->
    <!-- State -->
    <string-array name="array_state_filter">
        <item>Received</item>
        <item>Processed</item>
        <item>Marked</item>
        <item>Measured</item>
        <item>Outlined</item>
        <item>Finished</item>
        <item>All</item>
    </string-array>

    <string-array name="array_state_overview">
        <item>Received</item>
        <item>Processed</item>
        <item>Marked</item>
        <item>Measured</item>
        <item>Outlined</item>
        <item>Finished</item>
    </string-array>

    <!-- Sort Type -->
    <string-array name="array_sort_type_filter">
        <item>Number</item>
        <item>Distance</item>
        <item>Alphabet</item>
        <item>Complexity</item>
    </string-array>

    <!-- Sort Order -->
    <string-array name="array_sort_order_filter">
        <item>Increase</item>
        <item>Decrease</item>
    </string-array>
    <!-- Start -> FilterDialogFragment -->

    <!-- Units -->
    <string-array name="array_units">
        <item>Km</item>
        <item>Mi</item>
    </string-array>

    <!-- Zones -->
    <string-array name="array_zones">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- Start -> Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_filter">Filtering</string>
    <string name="menu_search">Searching</string>
    <string name="menu_locate">Locating</string>
    <!-- End -> Menu -->

    <!-- Units -->
    <string name="unit_km" translatable="false">Km</string>
    <string name="unit_mi" translatable="false">Mi</string>

    <!-- Themes -->
    <string name="marshmallow" translatable="false">Marshmallow</string>
    <string name="aladdin" translatable="false">Aladdin</string>
    <string name="deep_purple" translatable="false">Deep Purple</string>
    <string name="tinky_pinky" translatable="false">Tinky Pinky</string>
    <string name="orange_is_the_new_black" translatable="false">Orange is the new black</string>
    <string name="alice_in_wonderland" translatable="false">Alice in wonderland</string>
    <string name="black_and_yellow" translatable="false">Black and yellow</string>
    <string name="merry_christmas" translatable="false">Merry Christmas</string>

    <array name="theme_names">
        <item>Marshmallow</item>
        <item>Aladdin</item>
        <item>Deep Purple</item>
        <item>Tinky Pinky</item>
        <item>Orange is the new black</item>
        <item>Alice in wonderland</item>
        <item>Black and yellow</item>
        <item>Merry Christmas</item>
    </array>

    <!-- Start -> Universal -->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="search_filter">Search Filter</string>
    <string name="all">All</string>
    <string name="number">Number</string>
    <string name="project_number">Project number</string>
    <string name="distance">Distance</string>
    <string name="alphabet">Alphabet</string>
    <string name="complexity">Complexity</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="unit_km_with_value">%1$.2fkm</string>
    <string name="unit_mi_with_value">%1$.2fmi</string>
    <string name="travel_planner">Travel Planner</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="map">Map</string>
    <string name="sketch">Sketch</string>
    <string name="project_data">Project data</string>
    <string name="create_account">Create new account</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="or">or</string>
    <string name="sign_in_via_google">Sign in with Google</string>
    <string name="sign_in_via_github">Sign in with GitHub</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="reset_password">Reset password</string>
    <string name="password_reset_success">Message sent to given email address.</string>
    <string name="password_reset_user_not_found">User with given email address doesn\'t exist.</string>
    <string name="password_reset_connection_failed">Cannot send a message to given email address. Try again later.</string>
    <string name="password_reset_user_disabled">User with given email address has been disabled.</string>
    <string name="something_went_wrong">Oops. Something went wrong.</string>
    <string name="account_created">Account has been created. You can now sign in.</string>
    <string name="account_no_connection">Cannot register. Try again later.</string>
    <string name="user_exists">User with given email already exists.</string>
    <string name="no_user">No user</string>
    <string name="no_user_description">There is no user with given email address</string>
    <string name="user_disabled">User disabled</string>
    <string name="user_disabled_description">Account with given email address has been disabled.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_password_description">Given password is wrong.</string>
    <string name="no_connection">No connection</string>
    <string name="no_connection_description">Cannot connect to application server. Check your internet connection</string>
    <string name="login_error">Login error</string>
    <string name="login_error_description">Cannot sign in. Try again later.</string>
    <string name="project_list">Project list</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="points_count">Number of points</string>
    <string name="date_received">Receive date</string>
    <string name="date_processed">Process date</string>
    <string name="date_marked">Mark date</string>
    <string name="date_measured">Measure date</string>
    <string name="date_outlined">Outline date</string>
    <string name="date_finished">Finish date</string>
    <string name="state">State</string>
    <string name="value">Value</string>
    <string name="town">Town</string>
    <string name="street">Street</string>
    <string name="description">Description</string>
    <string name="received">Received</string>
    <string name="processed">Processed</string>
    <string name="marked">Marked</string>
    <string name="measured">Measured</string>
    <string name="outlined">Outlined</string>
    <string name="finished">Done</string>
    <string name="project_update_error">Project has been updated.</string>
    <string name="project_update_success">Cannot update the project.</string>
    <string name="sign_out_confirm">Do you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="units">Units</string>
    <string name="zone">Zone</string>
    <string name="theme">Theme</string>
    <string name="template_date" translatable="false">%1$s.%2$s.%3$s</string>

    <!-- Content Description -->
    <string name="cd_navigation_icon">Navigate</string>
    <string name="cd_map_icon">Show on map</string>
    <string name="cd_details_icon">Show details</string>
    <string name="cd_edit_project">Edit project</string>
    <string name="cd_show_current_location">Zoom to current location.</string>
    <string name="cd_show_points">Zoom to project points.</string>
    <string name="cd_draw_lines">Draw lines between all points.</string>
    <string name="cd_remove_lines">Remove lines between points.</string>
    <string name="cd_update_project">Update project.</string>
    <string name="cd_restore_project_data">Restore project_data.</string>

</resources>
