<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_project_list"
            android:icon="@drawable/ic_home"
            android:title="@string/project_list"/>
    <item
            android:id="@+id/nav_travel_planner"
            android:icon="@drawable/ic_explore"
            android:title="@string/travel_planner"/>
    <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_show_chart"
            android:title="@string/statistics"/>

    <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

    <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_lock"
            android:title="@string/sign_out"/>
</menu>