<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/navigation_main"
        app:startDestination="@+id/projectListFragment">

    <fragment
            android:id="@+id/projectListFragment"
            android:name="com.mamak.geobaza.ui.fragment.ProjectListFragment"
            android:label="@string/project_list"
            tools:layout="@layout/fragment_project_list"/>

    <fragment
            android:id="@+id/travelPlannerFragment"
            android:name="com.mamak.geobaza.ui.fragment.TravelPlannerFragment"
            android:label="@string/travel_planner"/>

    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.mamak.geobaza.ui.fragment.SettingsFragment"
            android:label="@string/settings"/>

    <fragment
            android:id="@+id/statisticsFragment"
            android:name="com.mamak.geobaza.ui.fragment.StatisticsFragment"
            android:label="@string/statistics"
            tools:layout="@layout/fragment_statistics"/>

    <dialog
            android:id="@+id/multipleChoiceDialogFragment"
            android:name="com.mamak.geobaza.utils.fragment.MultipleChoiceDialogFragment"
            android:label="@string/sign_out"
            tools:layout="@layout/layout_dialog">
        <argument android:name="multipleChoiceInterface"
                  app:argType="com.mamak.geobaza.utils.fragment.MultipleChoiceDialogFragment$MultipleChoiceDialogInterface"/>
    </dialog>

</navigation>