<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:iconTint="@color/colorTextOnPrimary"
            android:title="@string/menu_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_locate"
            android:icon="@drawable/ic_my_location"
            android:iconTint="@color/colorTextOnPrimary"
            android:title="@string/menu_locate"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_filter"
            android:iconTint="@color/colorTextOnPrimary"
            android:icon="@drawable/ic_filter_list"
            android:title="@string/menu_filter"
            app:showAsAction="ifRoom"/>
</menu>