<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary">

    <ImageView
            android:id="@+id/iv_action_navigation"
            android:contentDescription="@string/cd_navigation_icon"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:src="@drawable/ic_navigation"
            android:tint="?attr/colorSecondaryLight"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:layout_marginBottom="@dimen/default_padding_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_action_map"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/iv_action_map"
            android:contentDescription="@string/cd_map_icon"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:src="@drawable/ic_location_on"
            android:tint="?attr/colorSecondaryLight"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:layout_marginBottom="@dimen/default_padding_margin"
            app:layout_constraintStart_toEndOf="@id/iv_action_navigation"
            app:layout_constraintEnd_toStartOf="@id/iv_action_details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/iv_action_details"
            android:contentDescription="@string/cd_details_icon"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:src="@drawable/ic_info"
            android:tint="?attr/colorSecondaryLight"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:layout_marginBottom="@dimen/default_padding_margin"
            app:layout_constraintStart_toEndOf="@id/iv_action_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>