<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/tv_title_choice"
            android:text="@string/search_filter"
            android:textSize="16sp"
            android:textColor="@color/colorTextOnPrimary"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container_choice"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_choice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/separator_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_choice_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/container_choice_spinners">

            <TextView
                    android:id="@+id/tv_choice_area"
                    android:text="@string/filter_area"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_choice_state"/>

            <TextView
                    android:id="@+id/tv_choice_state"
                    android:text="@string/filter_state"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_choice_area"
                    app:layout_constraintBottom_toTopOf="@id/tv_choice_sort_type"/>

            <TextView
                    android:id="@+id/tv_choice_sort_type"
                    android:text="@string/sort_type"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_choice_state"
                    app:layout_constraintBottom_toTopOf="@id/tv_choice_sort_order"/>

            <TextView
                    android:id="@+id/tv_choice_sort_order"
                    android:text="@string/sort_order"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_choice_sort_type"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_choice_spinners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/container_choice_categories">

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/spinner_state"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_area"
                    app:layout_constraintBottom_toTopOf="@id/spinner_sort_type"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_sort_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_state"
                    app:layout_constraintBottom_toTopOf="@id/spinner_sort_order"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_sort_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondaryLight"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_sort_type"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:id="@+id/separator_bottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container_actions_choice"
            app:layout_constraintTop_toBottomOf="@id/container_choice"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_actions_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/separator_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/tv_cancel_choice"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/colorTextOnPrimary"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tv_apply_choice"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/tv_apply_choice"
                android:text="@string/apply"
                android:textSize="16sp"
                android:textColor="@color/colorTextOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>