<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <org.osmdroid.views.MapView
            android:id="@+id/mv_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <ImageView
            android:id="@+id/iv_follow_location"
            android:contentDescription="@string/cd_show_current_location"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:layout_marginBottom="@dimen/default_padding_margin_x"
            android:layout_marginEnd="@dimen/default_padding_margin_x"
            android:padding="@dimen/default_padding_margin"
            android:elevation="@dimen/elevation_small"
            android:background="@drawable/item_circle_full"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_my_location"
            android:tint="?attr/colorSecondaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_zoom_points"/>

    <ImageView
            android:id="@+id/iv_zoom_points"
            android:contentDescription="@string/cd_show_points"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:layout_marginBottom="@dimen/default_padding_margin_x"
            android:layout_marginEnd="@dimen/default_padding_margin_x"
            android:padding="@dimen/default_padding_margin"
            android:elevation="@dimen/elevation_small"
            android:background="@drawable/item_circle_full"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_filter_center_focus"
            android:tint="?attr/colorSecondaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_lines_switch"/>

    <ImageView
            android:id="@+id/iv_lines_switch"
            android:contentDescription="@string/cd_draw_lines"
            android:layout_width="@dimen/icon_touch_size_medium"
            android:layout_height="@dimen/icon_touch_size_medium"
            android:layout_marginEnd="@dimen/default_padding_margin_x"
            android:layout_marginBottom="@dimen/default_padding_margin_x"
            android:padding="@dimen/default_padding_margin"
            android:elevation="@dimen/elevation_small"
            android:background="@drawable/item_circle_full"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_timeline"
            android:tint="?attr/colorSecondaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:layout_marginStart="@dimen/default_padding_margin_x"
            android:textColor="?attr/colorSecondaryDark"
            android:textSize="@dimen/text_header_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="356m"/>

</androidx.constraintlayout.widget.ConstraintLayout>